package at.spengergasse.FotoAlbum.domain;

public enum AlbumType {
    DIGITAL,
    PHYSICAL
}
