package at.spengergasse.FotoAlbum.domain;

public enum Orientation {
    LANDSCAPE, // 1
    PORTRAIT,  // 2
    SQUARE     // 3
}
